# opencode-telemetry-panel

./: .gitignore  README.md  README_CN.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish-npm.yml  release-binaries.yml
plugin/: globals.d.ts  opencode-telemetry-panel.ts
scripts/: postinstall.mjs
src/: app.tsx  format.ts  main.tsx  styles.css  telemetry.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
