[package]
name = "opencode-telemetry-panel"
version = "0.0.7"
description = "Floating telemetry panel for OpenCode"
authors = ["Anomaly Innovations"]
edition = "2024"

[lib]
name = "opencode_telemetry_panel"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
